# ragloom

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SUPPORT.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  ops_release.yml
.github/agents/: commit-and-pr-specialist.agent.md
.github/scripts/: verify-release-version.py
.github/workflows/: bench.yml  ci.yml  container.yml  deps-maintenance.yml  governance.yml  publish-crate.yml  quality-deep.yml  release.yml  stale.yml
benches/: chunker.rs  sanity.rs
src/: error.rs  ids.rs  lib.rs  main.rs
src/config/: mod.rs  reload.rs
src/doc/: mod.rs
src/embed/: http_client.rs  mod.rs  openai_client.rs
src/observability/: mod.rs
src/pipeline/: mod.rs  planner.rs  runtime.rs
src/sink/: id.rs  mod.rs  qdrant.rs
src/source/: dir_scanner.rs  file_tailer.rs  mod.rs
src/state/: mod.rs  wal.rs
src/transform/: chunker.rs  mod.rs
src/transform/chunker/: engine.rs  error.rs  fingerprint.rs  legacy.rs  markdown.rs  mod.rs  public_types.rs  recursive.rs  router.rs  size.rs
src/transform/chunker/code/: grammars.rs  mod.rs  query.rs
src/transform/chunker/semantic/: adapter.rs  fastembed.rs  mod.rs  sentence.rs  signal.rs
tests/: canonical_path_file_uri.rs  chunker_properties.rs  chunker_semantic.rs  dir_scanner_source.rs  loom_runtime_shutdown.rs  loom_sanity.rs  observability_output_format.rs  pipeline_chunk_payload.rs  pipeline_embeds_text_loaded_from_fingerprint_v2.rs  pipeline_semantic_flag.rs  point_id_uuid.rs  qdrant_error_body.rs  qdrant_point_id_uuid.rs  release_workflow_contract.rs
tests/fixtures/semantic/: sample.txt
xtask/src/: lib.rs  main.rs
