[package]
name = "ragloom"
version = "0.1.0"
edition = "2024"
authors = ["Bizer <3411596361@qq.com>"]
description = "The minimalist RAG ingestion engine"
readme = "README.md"
repository = "https://github.com/ragloom/ragloom"
license = "Apache-2.0"
keywords = []
categories = []

[workspace]
members = ["xtask"]
resolver = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
blake3 = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
criterion = "0.5"
loom = "0.7"
tempfile = "3"
tracing-test = "0.2"

[features]
loom = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"loom\"))"] }
