[package]
name = "ragloom"
version = "0.1.0"
edition = "2024"
authors = ["Bizer <3411596361@qq.com>"]
description = "The minimalist RAG ingestion engine"
readme = "README.md"
repository = "https://github.com/ragloom/ragloom"
license = "Apache-2.0"
keywords = []
categories = []

[workspace]
members = ["xtask"]
resolver = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
blake3 = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chunk = "0.10"
fastembed = { version = "5", optional = true }
tiktoken-rs = "0.11"
pulldown-cmark = "0.13"
unicode-segmentation = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.25"

[dev-dependencies]
criterion = "0.8"
loom = "0.7"
tempfile = "3"
tracing-test = "0.2"
proptest = "1"

[features]
loom = []
fastembed = ["dep:fastembed"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"loom\"))"] }
